syntax = "proto3";

option go_package = "./proto";

package proto;

import "google/protobuf/timestamp.proto";

service TestService {
  rpc Simple (SimpleReq) returns (EmptyResp) {}
  rpc Repeated (RepeatedReq) returns (EmptyResp) {}
}

message SimpleReq {
  int32 number = 1;
}

message RepeatedReq {
  repeated int32 number = 1;
}

message EmptyResp {}
